--- a/client/index.html
+++ b/client/index.html
@@ -21,9 +21,9 @@
   <body>
     <nav id="navbar">
       <div class="nav-btn">
-        <a class="btn btn-sm btn-dark" id="buttonInstall" role="button">Install!</a>
+        <a class="btn btn-sm btn-dark" id="buttonInstall" role="button">install</a>
       </div>
-     <h1> Just Another Text Editor</h1>
+     <h1>text editor</h1>
      
       <div class="navbar-brand" 
             ><img src="./assets/icons/icon_96x96.png"
